<resources>
    <string name="app_name">AGame</string>
    <string name="Contrasena">Contraseña</string>
    <string name="Correo">Correo electrónico</string>
    <string name="ContraseñaSegura">Repetir contraseña</string>
    <string name="Nombre">Nombre</string>
    <string name="Apellido">Apellido</string>
    <string name="registrarse">Registrarse</string>
    <string name="perfil">Perfil</string>
    <string name="hoy">Hoy</string>
    <string name="partidos">Partidos</string>
    <string name="noticias">Noticias</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="todo">TODO</string>
    <string name="bienvenido_a_nuestro_programa_de_apuestas_de_la_king_s_league">¡Bienvenido a nuestro programa de apuestas de la King\'s League!</string>
    <string name="bienvenido_al_rea_de_transferencias">Bienvenido al área de transferencias</string>
    <string name="ver_saldo">Ver saldo</string>
    <string name="ingresar_dinero">Ingresar dinero</string>
    <string name="retirar_dinero">Retirar dinero</string>
    <string name="salir">Salir</string>
    <string name="aceptar">Aceptar</string>
    <string name="cu_nto_dinero_desea_retirar">¿Cuánto dinero desea retirar?</string>
    <string name="cantidad_de_dinero_a_ingresar">¿Cuanto dinero desea ingresar?</string>
    <string name="saldo">Su saldo es de: </string>
    <string name="todos_los_partidos_de_la_temporada">Todos los partidos de la temporada</string>
    <string name="transferencias">Transferencias</string>
    <string name="datos_personales">Datos personales</string>
    <string name="actualizar">Actualizar</string>
    <string name="fecha_de_nacimiento">Fecha de nacimiento</string>
    <string name="actualizar_contrase_a">Actualizar contraseña</string>
    <string name="actualizar_datos">Actualizar datos</string>
    <string name="nombre">Nombre: </string>
    <string name="apellido">Apellido: </string>
    <string name="correo_electr_nico">Correo electrónico: </string>
    <string name="contrase_a">Contraseña: </string>
    <string name="fecha_de_nacimientoo">Fecha de nacimiento: </string>
    <string name="credenciales">Credenciales</string>
    <string name="enviaremos_la_solicitud_al_siguiente_correo">Enviaremos la solicitud al siguiente correo:</string>
    <string name="correo_actual">Correo actual: </string>
    <string name="contrase_a_actual">Contraseña actual</string>
    <string name="nueva_contrase_a">Nueva contraseña</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="actualizar_contrasena">Actualizar contraseña</string>
    <string name="bienvenidos_a_agame">¡Bienvenidos a AGame!</string>
    <string name="gire_la_pantalla">Gire la pantalla</string>
    <string name="estos_son_los_pr_ximos_eventos">¡Estos son los próximos eventos!</string>
    <string name="real_madrid">Real Madrid</string>
    <string name="cuotax">CuotaX</string>
    <string name="cuota2">Cuota2</string>
    <string name="cuota1">Cuota1</string>
    <string name="deporte">Deporte</string>
    <string name="home_team">Home Team</string>
    <string name="vs">VS</string>
    <string name="away_team">Away Team</string>
    <string name="importe">Importe:</string>
    <string name="ganancias">Ganancias:</string>
    <string name="esta_es_tu_apuesta">¡Esta es tu apuesta!</string>
    <string name="euro">€</string>
    <string name="pr_ximos_eventos">Próximos eventos</string>
    <string name="estos_son_nuestros_eventos_de_los_pr_ximos_8_d_as">¡Estos son nuestros eventos de los próximos 8 días!</string>
    <string name="estos_son_nuestros_pr_ximos_8_eventos">Estos son nuestros próximos 8 eventos</string>
    <string name="ver_ganancias">Ver ganancias</string>
    <string name="introduza_cantidad">Introduza cantidad</string>


</resources>