<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile"
    android:background="#455A64">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="409dp"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_orange_light"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">
        </androidx.appcompat.widget.Toolbar>
        <!--Mis datos-->
        <TextView
            android:id="@+id/misdatos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_gravity="center"
            android:text="@string/datos_personales"
            android:textSize="25sp"
            android:textColor="#FEFEFE"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:src="?attr/actionModePasteDrawable"/>


        <!--Nombre-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/UnameTXT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombre"
                android:textSize="18sp"
                android:textColor="#FEFEFE"
                android:layout_marginTop="10dp"/>
            <TextView
                android:id="@+id/Uname"
                android:text="@string/Nombre"
                android:textColor="#FEFEFE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="5dp"/>
    </androidx.appcompat.widget.LinearLayoutCompat>


        <!--Apellido-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/UsurnameTXT"
                android:text="@string/apellido"
                android:textColor="#FEFEFE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/Usurname"
                android:text="@string/Apellido"
                android:textColor="#FEFEFE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="5dp"/>
    </androidx.appcompat.widget.LinearLayoutCompat>


        <!--Correo-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/UmailTXT"
                android:text="@string/correo_electr_nico"
                android:textColor="#FEFEFE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/Umail"
                android:text="@string/Correo"
                android:textColor="#FEFEFE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="5dp"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <!--Edad-->
        <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/UdateTXT"
            android:text="@string/fecha_de_nacimientoo"
            android:textColor="#FEFEFE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginTop="10dp"/>
            <TextView
                android:id="@+id/Udate"
                android:text="@string/fecha_de_nacimiento"
                android:textColor="#FEFEFE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="5dp"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

        <!--Botón actualizar-->
        <Button
            android:id="@+id/CerrarSesion"
            android:text="@string/cerrar_sesi_n"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:drawablePadding="15dp"
            android:padding="15dp"
            android:backgroundTint="#FF9933"/>


        <!--Botón actualizar contraseña-->
        <Button
            android:id="@+id/actualizarContrasena"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/actualizar_contrasena"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:backgroundTint="#FF9933"/>


    </androidx.appcompat.widget.LinearLayoutCompat>


</ScrollView>