<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#444444"
    tools:context=".Banco">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_orange_light"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/bienvenido_al_rea_de_transferencias"
        android:textAlignment="center"
        android:textSize="28sp"
        android:textColor="#FEFEFE"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.554"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="123dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/btnVersaldo"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColor="#FEFEFE"
            android:onClick="accion"
            android:text="@string/ver_saldo" />

        <RadioButton
            android:id="@+id/btnIngresar"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:textColor="#FEFEFE"
            android:onClick="accion"
            android:text="@string/ingresar_dinero" />

        <RadioButton
            android:id="@+id/btnRetirar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColor="#FEFEFE"
            android:onClick="accion"
            android:text="@string/retirar_dinero"
            />
    </RadioGroup>
    <!--verSaldo es la casilla donde aparecerá el saldo actual-->

    <TextView
        android:id="@+id/tvVerSaldo"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:hint="@string/saldo"
        android:textAlignment="textStart"
        android:backgroundTint="#FF9800"
        android:textColor="#FEFEFE"
        android:textSize="16sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.119"
        app:layout_constraintStart_toEndOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/txtIngresar"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="#FF9800"
        android:textColor="#FEFEFE"
        android:ems="10"
        android:hint="@string/cantidad_de_dinero_a_ingresar"
        android:inputType="numberDecimal"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.143"
        app:layout_constraintStart_toEndOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/tvVerSaldo"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/txtRetirar"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:backgroundTint="#FF9800"
        android:textColor="#FEFEFE"
        android:ems="10"
        android:hint="@string/cu_nto_dinero_desea_retirar"
        android:inputType="numberDecimal"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.143"
        app:layout_constraintStart_toEndOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/txtIngresar"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnAceptar"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_marginBottom="44dp"
        android:backgroundTint="#FF9933"
        android:onClick="botonAceptar"
        android:text="@string/aceptar"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Aceptar" />
</androidx.constraintlayout.widget.ConstraintLayout>